# memory-manager

./: .gitignore  CMakeLists.txt  README.md  explanations.txt
include/: memory_pool.h
src/: memory_pool.cpp
tests/: memory_pool_test.cpp
